// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YouTube Editor Node YouTube builds the expected component given a videoId 1`] = `
<div
  className="obojobo-draft--chunks--you-tube viewer pad"
>
  <div>
    <div
      className="obojobo-draft--chunks-you-tube-player"
      id="obojobo-draft--chunks-you-tube-player-mockId"
    />
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      Edit
    </button>
  </div>
</div>
`;

exports[`YouTube Editor Node YouTube builds the expected component without a videoId 1`] = `
<div
  className="obojobo-draft--chunks--you-tube viewer pad"
>
  <div
    className="empty-frame"
  >
    <div>
      No Video Id.
    </div>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      Edit
    </button>
  </div>
</div>
`;

exports[`YouTube Editor Node YouTube component edits input 1`] = `"<div class=\\"obojobo-draft--chunks--you-tube viewer pad\\"><div><div id=\\"obojobo-draft--chunks-you-tube-player-mockId\\" class=\\"obojobo-draft--chunks-you-tube-player\\"></div></div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center\\"><button class=\\"button\\">Edit</button></div></div>"`;

exports[`YouTube Editor Node handleSourceChange sets the nodes content 1`] = `
<div
  className="obojobo-draft--chunks--you-tube viewer pad"
>
  <div
    className="empty-frame"
  >
    <div>
      No Video Id.
    </div>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      Edit
    </button>
  </div>
</div>
`;
